<resources>
    <string name="app_name">Copy Board</string>
    <string name="create_new_file">Create New File</string>
    <string name="view_file_list">View File List</string>
    <string name="exit">Exit</string>
    <string name="type_here">Type here</string>
    <string name="save">save</string>
    <string name="clear">Clear</string>
    <string name="view">View</string>
    <string name="copy">copy</string>
    <string name="delete">delete</string>
</resources>