<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@color/listBackground"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#00000000"
        android:padding="6dp"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#00000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.23"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:text="@string/view"
            android:textAllCaps="true"
            android:textColor="#DCEDC8"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.15" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/copy"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.23"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:text="@string/copy"
            android:textAllCaps="true"
            android:textColor="#DCEDC8"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.15" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="0.23"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:text="@string/delete"
            android:textAllCaps="true"
            android:textColor="#DCEDC8"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>