<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".EditTextFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/lay"
        android:background="#00000000"
        android:nestedScrollingEnabled="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00000000"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoLink="all"
                android:autofillHints="@string/type_here"
                android:background="#00000000"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/type_here"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="false"
                android:textColor="@color/textColor"
                android:textColorHint="#DDD9D9"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00000000"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.3"
            android:background="@drawable/btn_bg"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@drawable/btn_bg"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>